--- a/.babelrc
+++ b/.babelrc
@@ -10,8 +10,7 @@
 	"@babel/proposal-class-properties", 
     "@babel/plugin-proposal-object-rest-spread",
     "syntax-dynamic-import",
-    "@babel/plugin-transform-runtime",
-      
+    "@babel/plugin-transform-runtime"
 
     ]
 }
