--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "plugin:import/errors",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
-    "prettier",
+    "prettier"
   ],
   "rules": {
     "react/jsx-filename-extension": [
