--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build": "npm run webpack -- --env.mode production",
     "stats": "npm run webpack -- --env.presets stats",
     "dev": "npm run server -- --env.mode development",
-    "pretty": "npx prettier  --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "pretty": "npx prettier  --write \"src/**/*.{js,jsx}\"",
     "eslint-fix": "eslint --fix \"src/**/*.{js,jsx}\"",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll",
-    "setup": "npm install && npm run test && npm run dev"
+    "setup": "npm install && npm run test"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./src/setupTests.js"
